--- a/pages/ui-button.html
+++ b/pages/ui-button.html
@@ -76,9 +76,11 @@
       </div>
       <div class="code">
         <code>
-          <div>&lt;ui-button size="small | medium | large"&gt;</div>
-          <div>&nbsp;Button</div>
-          <div>&lt;/ui-button&gt;</div>
+          <div>&lt;ui-button size="small"&gt;Button&lt;/ui-button&gt;</div>
+          <br>
+          <div>&lt;ui-button size="medium"&gt;Button&lt;/ui-button&gt;</div>
+          <br>
+          <div>&lt;ui-button size="large"&gt;Button&lt;/ui-button&gt;</div>
         </code>
       </div>
     </div>
@@ -88,13 +90,13 @@
     <div>Icon Only, Size Attribute (default: medium), Square Aspect Ratio</div>
     <div class="example">
       <div class="preview">
-        <ui-button aspect-ratio="1/1" size="small">
+        <ui-button size="small" aspect-ratio="1/1">
           <ui-icon icon="settings"></ui-icon>
         </ui-button>
-        <ui-button aspect-ratio="1/1" size="medium">
+        <ui-button size="medium" aspect-ratio="1/1">
           <ui-icon icon="settings"></ui-icon>
         </ui-button>
-        <ui-button aspect-ratio="1/1" size="large">
+        <ui-button size="large" aspect-ratio="1/1">
           <ui-icon icon="settings"></ui-icon>
         </ui-button>
       </div>
@@ -103,7 +105,15 @@
       </div>
       <div class="code">
         <code>
-          <div>&lt;ui-button aspect-ratio="1/1" size="small | medium | large"&gt;</div>
+          <div>&lt;ui-button size="small" aspect-ratio="1/1"&gt;</div>
+          <div>&nbsp;&lt;ui-icon icon="name"&gt;&lt;/ui-icon&gt;</div>
+          <div>&lt;/ui-button&gt;</div>
+          <br>
+          <div>&lt;ui-button size="medium" aspect-ratio="1/1"&gt;</div>
+          <div>&nbsp;&lt;ui-icon icon="name"&gt;&lt;/ui-icon&gt;</div>
+          <div>&lt;/ui-button&gt;</div>
+          <br>
+          <div>&lt;ui-button size="large" aspect-ratio="1/1"&gt;</div>
           <div>&nbsp;&lt;ui-icon icon="name"&gt;&lt;/ui-icon&gt;</div>
           <div>&lt;/ui-button&gt;</div>
         </code>
@@ -142,9 +152,13 @@
       </div>
       <div class="code">
         <code>
-          <div>&lt;ui-button shape="rounded | pill | sharp | circle"&gt;</div>
-          <div>&nbsp;Button</div>
-          <div>&lt;/ui-button&gt;</div>
+          <div>&lt;ui-button shape="rounded"&gt;Button&lt;/ui-button&gt;</div>
+          <br>
+          <div>&lt;ui-button shape="pill"&gt;Button&lt;/ui-button&gt;</div>
+          <br>
+          <div>&lt;ui-button shape="sharp"&gt;Button&lt;/ui-button&gt;</div>
+          <br>
+          <div>&lt;ui-button shape="circle"&gt;Button&lt;/ui-button&gt;</div>
         </code>
       </div>
     </div>
@@ -169,7 +183,15 @@
       </div>
       <div class="code">
         <code>
-          <div>&lt;ui-button shape="rounded | sharp | circle" aspect-ratio="1/1"&gt;</div>
+          <div>&lt;ui-button shape="rounded" aspect-ratio="1/1"&gt;</div>
+          <div>&nbsp;&lt;ui-icon icon="name"&gt;&lt;/ui-icon&gt;</div>
+          <div>&lt;/ui-button&gt;</div>
+          <br>
+          <div>&lt;ui-button shape="circle" aspect-ratio="1/1"&gt;</div>
+          <div>&nbsp;&lt;ui-icon icon="name"&gt;&lt;/ui-icon&gt;</div>
+          <div>&lt;/ui-button&gt;</div>
+          <br>
+          <div>&lt;ui-button shape="sharp" aspect-ratio="1/1"&gt;</div>
           <div>&nbsp;&lt;ui-icon icon="name"&gt;&lt;/ui-icon&gt;</div>
           <div>&lt;/ui-button&gt;</div>
         </code>
