--- a/pages/ui-divider.html
+++ b/pages/ui-divider.html
@@ -44,7 +44,7 @@
   </div>
 
   <div class="content-item">
-    <div>With centered Content</div>
+    <div>Content centered</div>
     <div class="example">
       <div class="preview">
         <ui-divider>
@@ -112,7 +112,7 @@
   </div>
 
   <div class="content-item">
-    <div>Text centered</div>
+    <div>Content centered</div>
     <div class="example">
       <div class="preview" style="height:200px;">
         <ui-divider orientation="vertical">
@@ -130,7 +130,7 @@
   </div>
 
   <div class="content-item">
-    <div>Text at the top (content-align="start")</div>
+    <div>Content aligned to top</div>
     <div class="example">
       <div class="preview" style="height:200px;">
         <ui-divider orientation="vertical" content-align="start">
@@ -148,7 +148,7 @@
   </div>
 
   <div class="content-item">
-    <div>Text at the bottom (content-align="end")</div>
+    <div>Content aligned to bottom</div>
     <div class="example">
       <div class="preview" style="height:200px;">
         <ui-divider orientation="vertical" content-align="end">
