--- a/pages/ui-button.html
+++ b/pages/ui-button.html
@@ -26,7 +26,7 @@
         Controls the loading state of the component.
       </li>
       <li>size - static (optional). Default: medium.<br>
-        Available values: small, medium, large.
+        Available options: small, medium, large.
       </li>
       <li>shape - static (optional). Default: rounded.<br>
         Sets the corner style: rounded, pill, sharp, or circle.
