--- a/pages/ui-focus.html
+++ b/pages/ui-focus.html
@@ -20,6 +20,9 @@
   <div class="content-item">
     <div>Placement</div>
     <div class="example">
+      <div class="toolbar">
+        <span>HTML</span>
+      </div>
       <div class="code">
         <code>
           <div>&lt;body&gt;</div>
