--- a/pages/ui-switch.html
+++ b/pages/ui-switch.html
@@ -12,44 +12,28 @@
   <div class="info">
     <h2>Attributes</h2>
     <ul>
-      <li>aria-label - static, required.
-        <br>If used outside of the <a href="#ui-field">field</a> component, the aria-label must be set manually.</li>
-      <li>height - static, optional. Default: 24.
-        <br>Component height is measured in pixels. Recommended range: 16 to 32. Even values are preferred.</li>
-      <li>checked - reactive, required. Default: false.
-        <br>Controls the checked state of the component.</li>
-      <li>required - static, optional.
-        <br>Indicates whether the component is required.</li>
-      <li>disabled - reactive, optional.
-        <br>Controls the disabled state of the component.</li>
+      <li>aria-label - static required.<br>
+        If used outside of the <a href="#ui-field">field</a> component, the aria-label must be set manually.</li>
+      <li>checked - reactive, required. Default: false.<br>
+        Controls the checked state of the component.</li>
+      <li>required - static, optional.<br>
+        Indicates whether the component is required.</li>
+      <li>disabled - reactive, optional.<br>
+        Controls the disabled state of the component.</li>
     </ul>
   </div>
 </section>
 
 <section class="content">
   <div class="content-item">
-    <div>Height 16</div>
+    <div>Sizes</div>
     <div class="example">
       <div class="preview">
-        <ui-switch height="16" aria-label="Settings"></ui-switch>
+        <ui-switch></ui-switch>
       </div>
       <div class="code">
         <code>
-          <div>&lt;ui-switch height="16" aria-label="Settings"&gt;&lt;/ui-switch&gt;</div>
-        </code>
-      </div>
-    </div>
-  </div>
-
-  <div class="content-item">
-    <div>Height 24 (default)</div>
-    <div class="example">
-      <div class="preview">
-        <ui-switch aria-label="Settings"></ui-switch>
-      </div>
-      <div class="code">
-        <code>
-          <div>&lt;ui-switch aria-label="Settings"&gt;&lt;/ui-switch&gt;</div>
+          <div>&lt;ui-switch&gt;&lt;/ui-switch&gt;</div>
         </code>
       </div>
     </div>
@@ -59,11 +43,11 @@
     <div>Checked</div>
     <div class="example">
       <div class="preview">
-        <ui-switch checked aria-label="Settings"></ui-switch>
+        <ui-switch checked></ui-switch>
       </div>
       <div class="code">
         <code>
-          <div>&lt;ui-switch checked aria-label="Settings"&gt;&lt;/ui-switch&gt;</div>
+          <div>&lt;ui-switch checked&gt;&lt;/ui-switch&gt;</div>
         </code>
       </div>
     </div>
@@ -73,11 +57,11 @@
     <div>Disabled</div>
     <div class="example">
       <div class="preview">
-        <ui-switch disabled aria-label="Settings"></ui-switch>
+        <ui-switch disabled></ui-switch>
       </div>
       <div class="code">
         <code>
-          <div>&lt;ui-switch disabled aria-label="Settings"&gt;&lt;/ui-switch&gt;</div>
+          <div>&lt;ui-switch disabled&gt;&lt;/ui-switch&gt;</div>
         </code>
       </div>
     </div>
