--- a/pages/ui-divider.html
+++ b/pages/ui-divider.html
@@ -5,7 +5,7 @@
   <div class="info">
     <h2>Usage</h2>
     <ul>
-      <li>If the component includes any content in addition to the line, it should be wrapped in an element such as a &lt;span&gt; or &lt;div&gt; to ensure proper rendering.</li>
+      <li>Any content added inside the component should be wrapped in a &lt;span&gt; or &lt;div&gt; to ensure proper rendering.</li>
       <li>When using non-text content (e.g., icons or custom elements), additional CSS may be required to ensure correct styling.</li>
     </ul>
   </div>
