--- a/pages/ui-icon.html
+++ b/pages/ui-icon.html
@@ -5,13 +5,13 @@
   <div class="info">
     <h2>Features</h2>
     <ul>
-      <li>The SVG color inherits the font color from the parent (ui-icon) element (currentColor).</li>
+      <li>The SVG uses currentColor, inheriting the font color from the parent ui-icon element.</li>
     </ul>
   </div>
   <div class="info">
     <h2>Attributes</h2>
     <ul>
-      <li>icon - reactive, required.
+      <li>icon - reactive (required).
         <br>Specifies the name of the icon to display.</li>
     </ul>
   </div>
@@ -25,7 +25,7 @@
         <ui-icon icon="home"></ui-icon>
       </div>
       <div class="toolbar">
-        <ui-button height="28" onclick="changeIconName()" text="Reactivity Test"></ui-button>
+        <ui-button size="small" onclick="changeIconName()">Reactivity Test</ui-button>
       </div>
       <div class="code">
         <code>
