--- a/pages/ui-spinner.html
+++ b/pages/ui-spinner.html
@@ -8,22 +8,18 @@
       <li>The spinner is already animated.</li>
     </ul>
   </div>
-  <div class="info">
-    <h2>Attributes</h2>
-    <ul>
-      <li>height - static, optional. Default: 24.
-        <br>The component's height is measured in pixels. Recommended range: 24 to 40. Even values are preferred.</li>
-    </ul>
-  </div>
 </section>
 
 <section class="content">
 
   <div class="content-item">
-    <div>Default height: 24</div>
+    <div>Minimal</div>
     <div class="example">
       <div class="preview">
         <ui-spinner></ui-spinner>
+      </div>
+      <div class="toolbar">
+        <span>HTML</span>
       </div>
       <div class="code">
         <code>
