--- a/pages/ui-icon.html
+++ b/pages/ui-icon.html
@@ -25,6 +25,7 @@
         <ui-icon icon="home"></ui-icon>
       </div>
       <div class="toolbar">
+        <span>HTML</span>
         <ui-button size="small" onclick="changeIconName()">Reactivity Test</ui-button>
       </div>
       <div class="code">
