--- a/pages/ui-divider.html
+++ b/pages/ui-divider.html
@@ -35,6 +35,9 @@
       <div class="preview">
         <ui-divider></ui-divider>
       </div>
+      <div class="toolbar">
+        <span>HTML</span>
+      </div>
       <div class="code">
         <code>
           <div>&lt;ui-divider&gt;&lt;/ui-divider&gt;</div>
@@ -50,6 +53,9 @@
         <ui-divider>
           <span>Text</span>
         </ui-divider>
+      </div>
+      <div class="toolbar">
+        <span>HTML</span>
       </div>
       <div class="code">
         <code>
@@ -69,6 +75,9 @@
           <span>Text</span>
         </ui-divider>
       </div>
+      <div class="toolbar">
+        <span>HTML</span>
+      </div>
       <div class="code">
         <code>
           <div>&lt;ui-divider content-align="start"&gt;</div>
@@ -87,6 +96,9 @@
           <span>Text</span>
         </ui-divider>
       </div>
+      <div class="toolbar">
+        <span>HTML</span>
+      </div>
       <div class="code">
         <code>
           <div>&lt;ui-divider content-align="end"&gt;</div>
@@ -103,6 +115,9 @@
       <div class="preview" style="height:200px;">
         <ui-divider orientation="vertical"></ui-divider>
       </div>
+      <div class="toolbar">
+        <span>HTML</span>
+      </div>
       <div class="code">
         <code>
           <div>&lt;ui-divider orientation="vertical"&gt;&lt;/ui-divider&gt;</div>
@@ -118,6 +133,9 @@
         <ui-divider orientation="vertical">
           <span>Text</span>
         </ui-divider>
+      </div>
+      <div class="toolbar">
+        <span>HTML</span>
       </div>
       <div class="code">
         <code>
@@ -137,6 +155,9 @@
           <span>Text</span>
         </ui-divider>
       </div>
+      <div class="toolbar">
+        <span>HTML</span>
+      </div>
       <div class="code">
         <code>
           <div>&lt;ui-divider orientation="vertical" content-align="start"&gt;</div>
@@ -154,6 +175,9 @@
         <ui-divider orientation="vertical" content-align="end">
           <span>Text</span>
         </ui-divider>
+      </div>
+      <div class="toolbar">
+        <span>HTML</span>
       </div>
       <div class="code">
         <code>
