--- a/pages/ui-icon.html
+++ b/pages/ui-icon.html
@@ -5,7 +5,7 @@
   <div class="info">
     <h2>Features</h2>
     <ul>
-      <li>The SVG uses currentColor, inheriting the font color from the parent ui-icon element.</li>
+      <li>The SVG uses currentColor, inheriting the font color from the parent element.</li>
     </ul>
   </div>
   <div class="info">
@@ -26,7 +26,7 @@
       </div>
       <div class="toolbar">
         <span>HTML</span>
-        <ui-button size="small" onclick="changeIconName()">Reactivity Test</ui-button>
+        <ui-button size="small" onclick="changeIconName()">REACTIVITY TEST</ui-button>
       </div>
       <div class="code">
         <code>
