--- a/pages/ui-checkbox.html
+++ b/pages/ui-checkbox.html
@@ -14,8 +14,6 @@
     <ul>
       <li>aria-label - static, required.
         <br>If used outside of the <a href="#ui-field">field</a> component, the aria-label must be set manually.</li>
-      <li>height - static, optional. Default: 24.
-        <br>The component's height is measured in pixels. Recommended range: 16 to 24. Even values are preferred.</li>
       <li>checked - reactive, optional.
         <br>Controls the checked state of the component.</li>
       <li>required - static, optional.
@@ -31,7 +29,7 @@
 <section class="content">
 
   <div class="content-item">
-    <div>Height 16</div>
+    <div>Sizes</div>
     <div class="example">
       <div class="preview">
         <ui-checkbox height="16" aria-label="Settings"></ui-checkbox>
@@ -39,20 +37,6 @@
       <div class="code">
         <code>
           <div>&lt;ui-checkbox height="16" aria-label="Settings"&gt;&lt;/ui-checkbox&gt;</div>
-        </code>
-      </div>
-    </div>
-  </div>
-
-  <div class="content-item">
-    <div>Height: 24 (default)</div>
-    <div class="example">
-      <div class="preview">
-        <ui-checkbox aria-label="Settings"></ui-checkbox>
-      </div>
-      <div class="code">
-        <code>
-          <div>&lt;ui-checkbox aria-label="Settings"&gt;&lt;/ui-checkbox&gt;</div>
         </code>
       </div>
     </div>
