--- a/pages/ui-checkbox.html
+++ b/pages/ui-checkbox.html
@@ -29,14 +29,14 @@
 <section class="content">
 
   <div class="content-item">
-    <div>Sizes</div>
+    <div>Minimal</div>
     <div class="example">
       <div class="preview">
-        <ui-checkbox height="16" aria-label="Settings"></ui-checkbox>
+        <ui-checkbox></ui-checkbox>
       </div>
       <div class="code">
         <code>
-          <div>&lt;ui-checkbox height="16" aria-label="Settings"&gt;&lt;/ui-checkbox&gt;</div>
+          <div>&lt;ui-checkbox&gt;&lt;/ui-checkbox&gt;</div>
         </code>
       </div>
     </div>
@@ -46,15 +46,15 @@
     <div>Shape (default: rounded)</div>
     <div class="example">
       <div class="preview">
-        <ui-checkbox shape="rounded" label="shape=&quot;rounded&quot;"></ui-checkbox>
-        <ui-checkbox shape="circle" label="shape=&quot;circle&quot;"></ui-checkbox>
-        <ui-checkbox shape="square" label="shape=&quot;square&quot;"></ui-checkbox>
+        <ui-checkbox shape="rounded"></ui-checkbox>
+        <ui-checkbox shape="circle"></ui-checkbox>
+        <ui-checkbox shape="square"></ui-checkbox>
       </div>
       <div class="code">
         <code>
-          <div>&lt;ui-checkbox shape="rounded" label="rounded"&gt;&lt;/ui-checkbox&gt;</div>
-          <div>&lt;ui-checkbox shape="circle" label="circle"&gt;&lt;/ui-checkbox&gt;</div>
-          <div>&lt;ui-checkbox shape="square" label="square"&gt;&lt;/ui-checkbox&gt;</div>
+          <div>&lt;ui-checkbox shape="rounded"&gt;&lt;/ui-checkbox&gt;</div>
+          <div>&lt;ui-checkbox shape="circle"&gt;&lt;/ui-checkbox&gt;</div>
+          <div>&lt;ui-checkbox shape="square"&gt;&lt;/ui-checkbox&gt;</div>
         </code>
       </div>
     </div>
@@ -64,11 +64,11 @@
     <div>Checked</div>
     <div class="example">
       <div class="preview">
-        <ui-checkbox aria-label="Settings" checked></ui-checkbox>
+        <ui-checkbox checked></ui-checkbox>
       </div>
       <div class="code">
         <code>
-          <div>&lt;ui-checkbox aria-label="Settings" checked&gt;&lt;/ui-checkbox&gt;</div>
+          <div>&lt;ui-checkbox checked&gt;&lt;/ui-checkbox&gt;</div>
         </code>
       </div>
     </div>
@@ -78,11 +78,11 @@
     <div>Disabled</div>
     <div class="example">
       <div class="preview">
-        <ui-checkbox disabled aria-label="Settings"></ui-checkbox>
+        <ui-checkbox disabled></ui-checkbox>
       </div>
       <div class="code">
         <code>
-          <div>&lt;ui-checkbox disabled aria-label="Settings"&gt;&lt;/ui-checkbox&gt;</div>
+          <div>&lt;ui-checkbox disabled&gt;&lt;/ui-checkbox&gt;</div>
         </code>
       </div>
     </div>
