--- a/pages/ui-button.html
+++ b/pages/ui-button.html
@@ -29,7 +29,8 @@
         Available options: small, medium, large.
       </li>
       <li>shape - static (optional). Default: rounded.<br>
-        Sets the corner style: rounded, pill, sharp, or circle.
+        Sets the corner style.<br>
+        Available options: rounded, pill, sharp, circle.
       </li>
       <li>color - static (optional). Default: gray.<br>
         Specifies the color scheme.
