--- a/pages/ui-divider.html
+++ b/pages/ui-divider.html
@@ -12,18 +12,26 @@
   <div class="info">
     <h2>Features</h2>
     <ul>
-      <li>By default, a horizontal divider has a width of 100%.</li>
-      <li>By default, a vertical divider has a height of 100%.</li>
+      <li>
+        By default, a horizontal divider has a width of 100%.
+      </li>
+      <li>
+        By default, a vertical divider has a height of 100%.
+      </li>
     </ul>
   </div>
   <div class="info">
     <h2>Attributes</h2>
     <ul>
-      <li>content-align - static (optional). Default: center.<br>
-        Available options: start, center, end.</li>
-      <li>orientation - static (optional). Default: horizontal.<br>
+      <li>
+        content-align - static (optional). Default: center.<br>
+        Available options: start, center, end.
+      </li>
+      <li>
+        orientation - static (optional). Default: horizontal.<br>
         Available options: horizontal, vertical.<br>
-        Defines the divider direction.</li>
+        Defines the divider direction.
+      </li>
     </ul>
   </div>
 </section>
