--- a/pages/ui-spinner.html
+++ b/pages/ui-spinner.html
@@ -5,7 +5,9 @@
   <div class="info">
     <h2>Features</h2>
     <ul>
-      <li>The spinner is already animated.</li>
+      <li>
+        The spinner is already animated.
+      </li>
     </ul>
   </div>
 </section>
