--- a/pages/ui-checkbox.html
+++ b/pages/ui-checkbox.html
@@ -5,23 +5,42 @@
   <div class="info">
     <h2>Features</h2>
     <ul>
-      <li>A visible outline appears when the component is focused.</li>
-      <li>Supports keyboard navigation: Tab to move, Enter/Space to trigger action.</li>
+      <li>
+        A visible outline appears when the component is focused.
+      </li>
+      <li>
+        Supports keyboard navigation: Tab to move, Enter/Space to trigger action.
+      </li>
     </ul>
   </div>
   <div class="info">
     <h2>Attributes</h2>
     <ul>
-      <li>aria-label - static, required.
-        <br>If used outside of the <a href="#ui-field">field</a> component, the aria-label must be set manually.</li>
-      <li>checked - reactive, optional.
-        <br>Controls the checked state of the component.</li>
-      <li>required - static, optional.
-        <br>Indicates whether the component is required.</li>
-      <li>disabled - reactive, optional.
-        <br>Controls the disabled state of the component.</li>
-      <li>shape - static, optional. Default: rounded.
-        <br>A button can be rounded, circle, or square.</li>
+      <li>
+        aria-label - static (required).<br>
+        If used outside of the <a href="#ui-field">field</a> component, the aria-label must be set manually.
+      </li>
+      <li>
+        checked - reactive (optional).<br>
+        Controls the checked state of the component.
+      </li>
+      <li>
+        required - static (optional).<br>
+        Indicates whether the component is required.
+      </li>
+      <li>
+        disabled - reactive (optional).<br>
+        Controls the disabled state of the component.
+      </li>
+      <li>
+        shape - static (optional). Default: rounded.<br>
+        Sets the corner style.<br>
+        Available options: rounded, circle, square.
+      </li>
+      <li>
+        size - static (optional). Default: small.<br>
+        Available options: x-small, small, medium.
+      </li>
     </ul>
   </div>
 </section>
@@ -37,6 +56,24 @@
       <div class="code">
         <code>
           <div>&lt;ui-checkbox&gt;&lt;/ui-checkbox&gt;</div>
+        </code>
+      </div>
+    </div>
+  </div>
+
+  <div class="content-item">
+    <div>Size</div>
+    <div class="example">
+      <div class="preview">
+        <ui-checkbox size="x-small"></ui-checkbox>
+        <ui-checkbox size="small"></ui-checkbox>
+        <ui-checkbox size="medium"></ui-checkbox>
+      </div>
+      <div class="code">
+        <code>
+          <div>&lt;ui-checkbox size="x-small"&gt;&lt;/ui-checkbox&gt;</div>
+          <div>&lt;ui-checkbox size="small"&gt;&lt;/ui-checkbox&gt;</div>
+          <div>&lt;ui-checkbox size="medium"&gt;&lt;/ui-checkbox&gt;</div>
         </code>
       </div>
     </div>
