--- a/pages/ui-field.html
+++ b/pages/ui-field.html
@@ -11,18 +11,26 @@
   <div class="info">
     <h2>Features</h2>
     <ul>
-      <li>Automatic association between the label and the form control by adding a unique UUID to the label's id attribute and assigning this UUID to the form control's aria-labelledby attribute. You can override the unique UUID by adding a custom id attribute to the ui-label component.</li>
+      <li>
+        Automatic association between the label and the form control by adding a unique UUID to the label's id attribute and assigning this UUID to the form control's aria-labelledby attribute. You can override the unique UUID by adding a custom id attribute to the ui-label component.
+      </li>
     </ul>
   </div>
   <div class="info">
     <h2>Attributes</h2>
     <ul>
-      <li>label-position - static, optional. Default: start
-        <br>Defines the position of the ui-label relative to the form control. By default, the label is placed before the form control, so start doesn't need to be explicitly set. Use end to place the label after the control.</li>
-      <li>orientation - static, optional. Default: horizontal
-        <br>Defines the layout direction of the label and the form control. horizontal | vertical</li>
-      <li>required - static, optional.
-        <br>Adds the required attribute to all child elements.</li>
+      <li>
+        label-position - static (optional). Default: start.<br>
+        Defines the position of the ui-label relative to the form control. By default, the label is placed before the form control, so start doesn't need to be explicitly set. Use end to place the label after the control.
+      </li>
+      <li>
+        orientation - static (optional). Default: horizontal.<br>
+        Defines the layout direction of the label and the form control. horizontal | vertical
+      </li>
+      <li>
+        required - static (optional).<br>
+        Adds the required attribute to all child elements.
+      </li>
     </ul>
   </div>
 </section>
