--- a/pages/ui-focus.html
+++ b/pages/ui-focus.html
@@ -5,13 +5,17 @@
   <div class="info">
     <h2>Usage</h2>
     <ul>
-      <li>Place right after &lt;body&gt; to prevent unexpected focus jumps.</li>
+      <li>
+        Place right after &lt;body&gt; to prevent unexpected focus jumps.
+      </li>
     </ul>
   </div>
   <div class="info">
     <h2>Features</h2>
     <ul>
-      <li>Invisible, non-interactive, but focusable.</li>
+      <li>
+        Invisible, non-interactive, but focusable.
+      </li>
     </ul>
   </div>
 </section>
