--- a/pages/ui-foundation.html
+++ b/pages/ui-foundation.html
@@ -5,21 +5,31 @@
   <div class="info">
     <h2>Information</h2>
     <ul>
-      <li>The library does not use Shadow DOM.</li>
-      <li>The library does not use internal CSS class names.</li>
-      <li>Text direction follows the parent or system context unless explicitly set.</li>
+      <li>
+        The library does not use Shadow DOM.
+      </li>
+      <li>
+        The library does not use internal CSS class names.
+      </li>
+      <li>
+        Text direction follows the parent or system context unless explicitly set.
+      </li>
     </ul>
   </div>
   <div class="info">
     <h2>Features</h2>
     <ul>
-      <li>Supports both LTR (Left-to-Right) and RTL (Right-to-Left) text directions.</li>
+      <li>
+        Supports both LTR (Left-to-Right) and RTL (Right-to-Left) text directions.
+      </li>
     </ul>
   </div>
   <div class="info">
     <h2>Attributes</h2>
     <ul>
-      <li>ARIA attributes used are valid for their roles and accurately reflect the component's state.</li>
+      <li>
+        ARIA attributes used are valid for their roles and accurately reflect the component's state.
+      </li>
     </ul>
   </div>
 </section>
