--- a/pages/ui-icon.html
+++ b/pages/ui-icon.html
@@ -5,14 +5,18 @@
   <div class="info">
     <h2>Features</h2>
     <ul>
-      <li>The SVG uses currentColor, inheriting the font color from the parent element.</li>
+      <li>
+        The SVG uses currentColor, inheriting the font color from the parent element.
+      </li>
     </ul>
   </div>
   <div class="info">
     <h2>Attributes</h2>
     <ul>
-      <li>icon - reactive (required).
-        <br>Specifies the name of the icon to display.</li>
+      <li>
+        icon - reactive (required).<br>
+        Specifies the name of the icon to display.
+      </li>
     </ul>
   </div>
 </section>
