--- a/pages/ui-icons.html
+++ b/pages/ui-icons.html
@@ -5,8 +5,12 @@
   <div class="info">
     <h2>Design Details</h2>
     <ul>
-      <li>Line thickness: 2px.</li>
-      <li>Corner radius: 2px.</li>
+      <li>
+        Line thickness: 2px.
+      </li>
+      <li>
+        Corner radius: 2px.
+      </li>
     </ul>
   </div>
 </section>
