--- a/pages/ui-input.html
+++ b/pages/ui-input.html
@@ -5,36 +5,55 @@
   <div class="info">
     <h2>Usage</h2>
     <ul>
-      <li>Static init-only attributes are removed from the custom element itself immediately after initialization. This is done to prevent confusion and avoid conflicts between attributes and properties during the component lifecycle. Their values are still applied to the relevant internal elements, so the component's behavior remains consistent with the initial configuration.<br><br>
-      
-      To update these values dynamically, use the corresponding JavaScript properties on the component instance.</li>
+      <li>
+        Static init-only attributes are removed from the custom element itself immediately after initialization. This is done to prevent confusion and avoid conflicts between attributes and properties during the component lifecycle. Their values are still applied to the relevant internal elements, so the component's behavior remains consistent with the initial configuration.<br><br>
+        To update these values dynamically, use the corresponding JavaScript properties on the component instance.
+      </li>
     </ul>
   </div>
   <div class="info">
     <h2>Features</h2>
     <ul>
-      <li>The clickable area of the Clear button is larger than the icon itself to make it easier to click or tap.</li>
+      <li>
+        The clickable area of the Clear button is larger than the icon itself to make it easier to click or tap.
+      </li>
     </ul>
   </div>
   <div class="info">
     <h2>Attributes</h2>
     <ul>
-      <li>type - static (init-only), optional. Default: text.<br>
-        Specifies the input type. Update via property: component.type = 'email'.</li>
-      <li>value - static (init-only), optional.<br>
-        Sets the current value of the input. Update via property: component.value = 'Value'.</li>
-      <li>placeholder - static (init-only), optional.<br>
-        Text displayed when the input is empty. Update via property: component.placeholder = 'Placeholder'.</li>
-      <li>clearable - static, optional.<br>
-        Adds a clear button to the input.</li>
-      <li>required - reactive, optional. Default: false.<br>
-        Indicates whether the input is required.</li>
-      <li>disabled - reactive, optional. Default: false.<br>
-        Controls the disabled state of the component.</li>
-      <li>size - static, optional. Default: medium.<br>
-        Available values: small, medium, large.</li>
-      <li>shape - static, optional. Default: rounded.<br>
-        Sets the corner style: rounded, pill, or square.</li>
+      <li>
+        type - static (init-only), optional. Default: text.<br>
+        Specifies the input type. Update via property: component.type = 'email'.
+      </li>
+      <li>
+        value - static (init-only), optional.<br>
+        Sets the current value of the input. Update via property: component.value = 'Value'.
+      </li>
+      <li>
+        placeholder - static (init-only), optional.<br>
+        Text displayed when the input is empty. Update via property: component.placeholder = 'Placeholder'.
+      </li>
+      <li>
+        clearable - static, optional.<br>
+        Adds a clear button to the input.
+      </li>
+      <li>
+        required - reactive, optional. Default: false.<br>
+        Indicates whether the input is required.
+      </li>
+      <li>
+        disabled - reactive, optional. Default: false.<br>
+        Controls the disabled state of the component.
+      </li>
+      <li>
+        size - static, optional. Default: medium.<br>
+        Available values: small, medium, large.
+      </li>
+      <li>
+        shape - static, optional. Default: rounded.<br>
+        Sets the corner style: rounded, pill, or square.
+      </li>
     </ul>
   </div>
 </section>
