--- a/pages/ui-label.html
+++ b/pages/ui-label.html
@@ -5,24 +5,34 @@
   <div class="info">
     <h2>Usage</h2>
     <ul>
-      <li>The component is used in conjunction with a form control and a <a href="#ui-field">field</a>.</li>
+      <li>
+        The component is used in conjunction with a form control and a <a href="#ui-field">field</a>.
+      </li>
     </ul>
   </div>
   <div class="info">
     <h2>Features</h2>
     <ul>
-      <li>By default, the cursor is set to pointer.</li>
+      <li>
+        By default, the cursor is set to pointer.
+      </li>
     </ul>
   </div>
   <div class="info">
     <h2>Attributes</h2>
     <ul>
-      <li>passive - static, optional.
-        <br>Sets the cursor to default, giving the impression that the element is not interactive.</li>
-      <li>required - static, optional.
-        <br>Indicates whether the associated form control is required.</li>
-      <li>symbol - static, optional. Default: *
-        <br>Overrides the default required symbol. Only a single character is allowed; if the string is longer than one character, only the first character will be used. The symbol is added only if the required attribute is present.</li>
+      <li>
+        passive - static, optional.<br>
+        Sets the cursor to default, giving the impression that the element is not interactive.
+      </li>
+      <li>
+        required - static, optional.<br>
+        Indicates whether the associated form control is required.
+      </li>
+      <li>
+        symbol - static, optional. Default: *.<br>
+        Overrides the default required symbol. Only a single character is allowed; if the string is longer than one character, only the first character will be used. The symbol is added only if the required attribute is present.
+      </li>
     </ul>
   </div>
 </section>
