--- a/pages/ui-select.html
+++ b/pages/ui-select.html
@@ -11,8 +11,12 @@
   <div class="info">
     <h2>Attributes</h2>
     <ul>
-      <li>text - reactive, optional. The default text or value to display. If not provided, a hyphen ("-") is shown.</li>
-      <li>icon-combobox - reactive, optional. Default: arrow-down-small.</li>
+      <li>
+        text - reactive, optional. The default text or value to display. If not provided, a hyphen ("-") is shown.
+      </li>
+      <li>
+        icon-combobox - reactive, optional. Default: arrow-down-small.
+      </li>
     </ul>
   </div>
 </section>
