--- a/pages/ui-switch.html
+++ b/pages/ui-switch.html
@@ -5,21 +5,33 @@
   <div class="info">
     <h2>Features</h2>
     <ul>
-      <li>A visible outline appears on focused buttons.</li>
-      <li>Supports keyboard navigation: Tab to move, Enter/Space to trigger action.</li>
+      <li>
+        A visible outline appears on focused buttons.
+      </li>
+      <li>
+        Supports keyboard navigation: Tab to move, Enter/Space to trigger action.
+      </li>
     </ul>
   </div>
   <div class="info">
     <h2>Attributes</h2>
     <ul>
-      <li>aria-label - static required.<br>
-        If used outside of the <a href="#ui-field">field</a> component, the aria-label must be set manually.</li>
-      <li>checked - reactive, required. Default: false.<br>
-        Controls the checked state of the component.</li>
-      <li>required - static, optional.<br>
-        Indicates whether the component is required.</li>
-      <li>disabled - reactive, optional.<br>
-        Controls the disabled state of the component.</li>
+      <li>
+        aria-label - static required.<br>
+        If used outside of the <a href="#ui-field">field</a> component, the aria-label must be set manually.
+      </li>
+      <li>
+        checked - reactive, required. Default: false.<br>
+        Controls the checked state of the component.
+      </li>
+      <li>
+        required - static, optional.<br>
+        Indicates whether the component is required.
+      </li>
+      <li>
+        disabled - reactive, optional.<br>
+        Controls the disabled state of the component.
+      </li>
     </ul>
   </div>
 </section>
