--- a/pages/ui-text.html
+++ b/pages/ui-text.html
@@ -5,14 +5,18 @@
   <div class="info">
     <h2>Features</h2>
     <ul>
-      <li>The text block width is 100%.</li>
+      <li>
+        The text block width is 100%.
+      </li>
     </ul>
   </div>
   <div class="info">
     <h2>Attributes</h2>
     <ul>
-      <li>text-align - static (optional). Default: start.
-        <br>Controls text alignment: start, center, end, and justify.</li>
+      <li>
+        text-align - static (optional). Default: start.<br>
+        Controls text alignment: start, center, end, and justify.
+      </li>
     </ul>
   </div>
 </section>
