--- a/pages/ui-textarea.html
+++ b/pages/ui-textarea.html
@@ -5,9 +5,10 @@
   <div class="info">
     <h2>Usage</h2>
     <ul>
-      <li>Static init-only attributes are removed from the custom element itself immediately after initialization. This is done to prevent confusion and avoid conflicts between attributes and properties during the component lifecycle. Their values are still applied to the relevant internal elements, so the component's behavior remains consistent with the initial configuration.<br><br>
-      
-      To update these values dynamically, use the corresponding JavaScript properties on the component instance.</li>
+      <li>
+        Static init-only attributes are removed from the custom element itself immediately after initialization. This is done to prevent confusion and avoid conflicts between attributes and properties during the component lifecycle. Their values are still applied to the relevant internal elements, so the component's behavior remains consistent with the initial configuration.<br><br>
+        To update these values dynamically, use the corresponding JavaScript properties on the component instance.
+      </li>
     </ul>
   </div>
   <div class="info">
@@ -19,16 +20,27 @@
   <div class="info">
     <h2>Attributes</h2>
     <ul>
-      <li>placeholder - static (init-only), optional.<br>
-        Text displayed when the textarea is empty. Update via property: component.placeholder = 'Placeholder'.</li>
-      <li>height - static, optional. Default: 40.
-        <br>Component height is measured in pixels. Recommended range: 24 to 40. Even values are preferred.</li>
-      <li>required - static, optional.
-        <br>Defines whether the component is required.</li>
-      <li>disabled - reactive, optional.
-        <br>Controls the disabled state of the component.</li>
-      <li>shape - static, optional. Default: rounded.
-        <br>The component shape can be rounded or square.</li>
+      <li>
+        placeholder - static (optional).<br>
+        Text displayed when the textarea is empty. Update via property: component.placeholder = 'Placeholder'.
+      </li>
+      <li>
+        height - static (optional). Default: 40.<br>
+        Component height is measured in pixels. Recommended range: 24 to 40. Even values are preferred.
+      </li>
+      <li>
+        required - static (optional).<br>
+        Defines whether the component is required.
+      </li>
+      <li>
+        disabled - reactive (optional).<br>
+        Controls the disabled state of the component.
+      </li>
+      <li>
+        shape - static (optional). Default: rounded.<br>
+        Sets the corner style.<br>
+        Available options: rounded, square.
+      </li>
     </ul>
   </div>
 </section>
