--- a/pages/ui-checkbox.html
+++ b/pages/ui-checkbox.html
@@ -53,6 +53,9 @@
       <div class="preview">
         <ui-checkbox></ui-checkbox>
       </div>
+      <div class="toolbar">
+        <span>HTML</span>
+      </div>
       <div class="code">
         <code>
           <div>&lt;ui-checkbox&gt;&lt;/ui-checkbox&gt;</div>
@@ -68,6 +71,9 @@
         <ui-checkbox size="x-small"></ui-checkbox>
         <ui-checkbox size="small"></ui-checkbox>
         <ui-checkbox size="medium"></ui-checkbox>
+      </div>
+      <div class="toolbar">
+        <span>HTML</span>
       </div>
       <div class="code">
         <code>
@@ -87,6 +93,9 @@
         <ui-checkbox shape="circle"></ui-checkbox>
         <ui-checkbox shape="square"></ui-checkbox>
       </div>
+      <div class="toolbar">
+        <span>HTML</span>
+      </div>
       <div class="code">
         <code>
           <div>&lt;ui-checkbox shape="rounded"&gt;&lt;/ui-checkbox&gt;</div>
@@ -103,6 +112,9 @@
       <div class="preview">
         <ui-checkbox checked></ui-checkbox>
       </div>
+      <div class="toolbar">
+        <span>HTML</span>
+      </div>
       <div class="code">
         <code>
           <div>&lt;ui-checkbox checked&gt;&lt;/ui-checkbox&gt;</div>
@@ -116,6 +128,9 @@
     <div class="example">
       <div class="preview">
         <ui-checkbox disabled></ui-checkbox>
+      </div>
+      <div class="toolbar">
+        <span>HTML</span>
       </div>
       <div class="code">
         <code>
