--- a/pages/ui-field.html
+++ b/pages/ui-field.html
@@ -36,6 +36,7 @@
 </section>
 
 <section class="content">
+
   <div class="content-item">
     <div>Default</div>
     <div class="example">
@@ -44,6 +45,9 @@
           <ui-label>Label</ui-label>
           <ui-checkbox></ui-checkbox>
         </ui-field>
+      </div>
+      <div class="toolbar">
+        <span>HTML</span>
       </div>
       <div class="code">
         <code>
@@ -65,6 +69,9 @@
           <ui-switch></ui-switch>
         </ui-field>
       </div>
+      <div class="toolbar">
+        <span>HTML</span>
+      </div>
       <div class="code">
         <code>
           <div>&lt;ui-field&gt;</div>
@@ -84,6 +91,9 @@
           <ui-label>Label</ui-label>
           <ui-switch></ui-switch>
         </ui-field>
+      </div>
+      <div class="toolbar">
+        <span>HTML</span>
       </div>
       <div class="code">
         <code>
@@ -105,6 +115,9 @@
           <ui-textarea height="200"></ui-textarea>
         </ui-field>
       </div>
+      <div class="toolbar">
+        <span>HTML</span>
+      </div>
       <div class="code">
         <code>
           <div>&lt;ui-field required orientation="vertical"&gt;</div>
@@ -115,4 +128,5 @@
       </div>
     </div>
   </div>
+
 </section>
