--- a/pages/ui-label.html
+++ b/pages/ui-label.html
@@ -45,6 +45,9 @@
       <div class="preview">
         <ui-label>Label</ui-label>
       </div>
+      <div class="toolbar">
+        <span>HTML</span>
+      </div>
       <div class="code">
         <code>
           <div>&lt;ui-label&gt;Label&lt;/ui-label&gt;</div>
@@ -58,6 +61,9 @@
     <div class="example">
       <div class="preview">
         <ui-label passive>Label</ui-label>
+      </div>
+      <div class="toolbar">
+        <span>HTML</span>
       </div>
       <div class="code">
         <code>
@@ -73,6 +79,9 @@
       <div class="preview">
         <ui-label required>Label</ui-label>
       </div>
+      <div class="toolbar">
+        <span>HTML</span>
+      </div>
       <div class="code">
         <code>
           <div>&lt;ui-label required&gt;Label&lt;/ui-label&gt;</div>
@@ -86,6 +95,9 @@
     <div class="example">
       <div class="preview">
         <ui-label symbol="•" required>Label</ui-label>
+      </div>
+      <div class="toolbar">
+        <span>HTML</span>
       </div>
       <div class="code">
         <code>
