--- a/pages/ui-listbox.html
+++ b/pages/ui-listbox.html
@@ -28,6 +28,9 @@
           <div role="option">Option 3</div>
         </ui-listbox>
       </div>
+      <div class="toolbar">
+        <span>HTML</span>
+      </div>
       <div class="code">
         <code>
           <div>&lt;ui-listbox&gt;&lt;/ui-listbox&gt;</div>
