--- a/pages/ui-switch.html
+++ b/pages/ui-switch.html
@@ -37,11 +37,34 @@
 </section>
 
 <section class="content">
+
+  <div class="content-item">
+    <div>Minimal</div>
+    <div class="example">
+      <div class="preview">
+        <ui-switch></ui-switch>
+      </div>
+      <div class="toolbar">
+        <span>HTML</span>
+      </div>
+      <div class="code">
+        <code>
+          <div>&lt;ui-switch&gt;&lt;/ui-switch&gt;</div>
+        </code>
+      </div>
+    </div>
+  </div>
+
   <div class="content-item">
     <div>Sizes</div>
     <div class="example">
       <div class="preview">
-        <ui-switch></ui-switch>
+        <ui-switch size="x-small"></ui-switch>
+        <ui-switch size="small"></ui-switch>
+        <ui-switch size="medium"></ui-switch>
+      </div>
+      <div class="toolbar">
+        <span>HTML</span>
       </div>
       <div class="code">
         <code>
@@ -57,6 +80,9 @@
       <div class="preview">
         <ui-switch checked></ui-switch>
       </div>
+      <div class="toolbar">
+        <span>HTML</span>
+      </div>
       <div class="code">
         <code>
           <div>&lt;ui-switch checked&gt;&lt;/ui-switch&gt;</div>
@@ -71,6 +97,9 @@
       <div class="preview">
         <ui-switch disabled></ui-switch>
       </div>
+      <div class="toolbar">
+        <span>HTML</span>
+      </div>
       <div class="code">
         <code>
           <div>&lt;ui-switch disabled&gt;&lt;/ui-switch&gt;</div>
@@ -78,4 +107,5 @@
       </div>
     </div>
   </div>
+
 </section>
