--- a/pages/ui-textarea.html
+++ b/pages/ui-textarea.html
@@ -53,6 +53,9 @@
         <ui-textarea></ui-textarea>
         <ui-textarea shape="square"></ui-textarea>
       </div>
+      <div class="toolbar">
+        <span>HTML</span>
+      </div>
       <div class="code">
         <code>
           <div>&lt;ui-textarea&gt;&lt;/ui-textarea&gt;</div>
@@ -85,6 +88,9 @@
       <div class="preview">
         <ui-textarea placeholder="Placeholder"></ui-textarea>
       </div>
+      <div class="toolbar">
+        <span>HTML</span>
+      </div>
       <div class="code">
         <code>
           &lt;ui-textarea placeholder="Placeholder"&gt;&lt;/ui-textarea&gt;
@@ -99,6 +105,9 @@
       <div class="preview">
         <ui-textarea placeholder="Disabled" disabled></ui-textarea>
       </div>
+      <div class="toolbar">
+        <span>HTML</span>
+      </div>
       <div class="code">
         <code>
           &lt;ui-textarea placeholder="Disabled" disabled&gt;&lt;/ui-textarea&gt;
@@ -112,6 +121,9 @@
     <div class="example">
       <div class="preview">
         <ui-textarea value="Disabled" disabled></ui-textarea>
+      </div>
+      <div class="toolbar">
+        <span>HTML</span>
       </div>
       <div class="code">
         <code>
@@ -129,6 +141,9 @@
         <ui-textarea status="error"></ui-textarea>
         <ui-textarea status="success"></ui-textarea>
         <ui-textarea status="warning"></ui-textarea>
+      </div>
+      <div class="toolbar">
+        <span>HTML</span>
       </div>
       <div class="code">
         <code>
