--- a/pages/ui-button.html
+++ b/pages/ui-button.html
@@ -32,7 +32,7 @@
         Sets the corner style.<br>
         Available options: rounded, pill, sharp, circle.
       </li>
-      <li>color - static (optional). Default: gray.<br>
+      <li>color - static (optional). Default: default.<br>
         Specifies the color scheme.
       </li>
       <li>aspect-ratio="1/1" - static (optional).<br>
