--- a/pages/ui-select.html
+++ b/pages/ui-select.html
@@ -29,6 +29,9 @@
       <div class="preview">
         <ui-select></ui-select>
       </div>
+      <div class="toolbar">
+        <span>HTML</span>
+      </div>
       <div class="code">
         <code>
           <div>&lt;ui-select&gt;&lt;/ui-select&gt;</div>
@@ -42,6 +45,9 @@
     <div class="example">
       <div class="preview">
         <ui-select text="Select"></ui-select>
+      </div>
+      <div class="toolbar">
+        <span>HTML</span>
       </div>
       <div class="code">
         <code>
